<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mandatory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mandatory" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:text="@string/mandatory"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#ff4b4b" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="1."
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/product"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/product_hint"
                android:inputType="text"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@drawable/mandatory" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="2."
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/quantity"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="135dp"
                android:src="@drawable/mandatory" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/decrease"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="-" />

        <EditText
            android:id="@+id/quantity_for_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/quantity_hint"
            android:inputType="phone"
            android:textAppearance="?android:textAppearanceSmall"
            android:textSize="16sp" />
        <Button
            android:id="@+id/increase"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="+" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/price_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="3."
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/price"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_pick"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="238dp"
                android:src="@drawable/mandatory" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:padding="4dp" />

            <TextView
                android:id="@+id/seekingPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="4."
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/store"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="97dp"
                android:src="@drawable/mandatory" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="5."
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/seller"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/seller_hint"
                android:inputType="text"
                android:textAppearance="?android:textAppearanceSmall" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:src="@drawable/mandatory" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="6."
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/image"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/pick_image" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:src="@drawable/mandatory" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="7."
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/order"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0073dc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:onClick="order"
                android:text="@string/order" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:src="@drawable/mandatory" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_img"
                android:layout_width="350dp"
                android:layout_height="200dp" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>